sort filt added to mobile adaptation (not ideal way), fixed product name and proce behaviour on mobile

--- a/src/PagesFolder/MainPage/Components/Content.module.css
+++ b/src/PagesFolder/MainPage/Components/Content.module.css
@@ -155,6 +155,9 @@ align-items: start;
   .flexBoxPeople{
     display: none;
   }
+  .captionsDiv{
+    display: none;
+  }
   .searchMobileDiv{
     display: block;
   }
